# minciu-pasaulis

./: .conf__TEMPLATE  .env___TEMPLATE  .gitignore  .thoughts_workspace.code-workspace  _config_db.cnf  _config_secrets.json  manage.py  pyproject.toml  pytest.ini
project/: conftest.py
project/config/: urls.py  wsgi.py
project/config/settings/: base.py  develop.py  local.py  production.py  testing.py
project/core/: apps.py
project/core/lib/: test_utils.py
project/core/mixins/: views.py
project/core/templates/: components.yaml
project/core/utils/: random.py
project/static/css/: app.css
project/static/js/: dialog.js  form_scripts.js  lightbox.js
project/templates/: 403.html  404.html  500.html  base.html  pagination.html
project/thoughts/: admin.py  apps.py  context.py  factories.py  forms.py  models.py  urls.py  views.py
project/thoughts/migrations/: 0001_initial.py  0002_auto_20180718_1611.py  0003_auto_20180803_1600.py  0004_rename_categories_category_rename_thoughts_thought.py  0005_remove_category_has_childs.py
project/thoughts/templates/thoughts/: index.html  list.html  thought_confirm_delete.html  thought_detail.html  thought_form.html  thought_form_create.html  thought_form_update.html  thought_list.html  thoughts_detail.html
project/thoughts/templatetags/: category_list.py  link_name.py
project/thoughts/tests/: test_forms.py  test_templatetags_link_name.py  test_views.py  test_views_create.py  test_views_delete.py  test_views_detail.py  test_views_update.py
requirements/: base.txt  develop.txt
(+6 files in other folders)
